refactor(gabriel): use java.nio.* in judgels-grader-app